Fixed much formatting, still working on card alignment and wrapping

--- a/less/index.less
+++ b/less/index.less
@@ -16,25 +16,41 @@
         .border-radius(10px);
     }
 }
+.top-content{
+    background-color: rgb(223, 223, 223);
+    border-top-left-radius:10px;
+    border-top-right-radius:10px;
+}
 .jumbo{
     text-align: center;
     font-size: 1.4rem;
-    background-color: lightgrey;
-    .border-radius(10px);
+    // background-color: rgb(223, 223, 223);
+    // .border-radius(10px);
 }
 .jobTable{
     font-size: .9rem;
+    border:1px solid rgb(223, 223, 223);
+    .border-radius(10px);
 }
 .cardsGroup{
     padding: 15px;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    .lambda{
+        width: 50%;
+    }
+    .hsu{
+        border-top-left-radius:10px;
+        border-top-right-radius:10px;
+    }
+    .delight{
+        border-top-left-radius:10px;
+        border-top-right-radius:10px;
+    }
 }
 .card{
     max-width:100%;
     height:100%;
     align-items: center;
-}
-.lambda{
-    width: 50%;
+    .border-radius(10px);
 }
